--- a/chat.html
+++ b/chat.html
@@ -14,6 +14,16 @@
     <link rel="icon" type="image/jpeg" href="https://ciwjjfcuhubjydajazkk.supabase.co/storage/v1/object/public/webstie-icon//GrokAni.jpg">
 
     <link rel="stylesheet" href="styles.css">
+    
+    <!-- Google tag (gtag.js) -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5ZLXDV99EC"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        
+        gtag('config', 'G-5ZLXDV99EC');
+    </script>
     <style>
         body {
             margin: 0;
