Add sitemap.xml and update footer with sitemap link

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>GrokAni - Your AI-Powered Grok Ani Chat Companion</title>
     <meta name="description"
-        content="GrokAni is an AI-powered ani chat companion that brings your favorite ani characters to life with advanced AI, offering real-time conversations, emotional resonance, and a truly personalized experience.">
+        content="GrokAni is an AI-powered anime chat companion that offers a personalized experience through real-time conversation and emotional resonance.">
     <meta name="keywords"
         content="Grok Ani, Grok AI Companion, Ani Companion, AI Companion, Anime Chat, Anime Reactions, artificial intelligence, voice chat, GPT, Claude, Gemini, voice synthesis, conversational AI">
     <meta name="author" content="GrokAni Team">
@@ -303,7 +303,8 @@
                         class="footer-link-external">Airi project</a>.
                     Licensed under the same terms as the original project.
                 </p>
-                <p class="footer-copyright">© 2024 GrokAni. All rights reserved.</p>
+                <p class="footer-copyright">© 2024 GrokAni. All rights reserved. | <a href="sitemap.xml"
+                        class="footer-link-external" target="_blank">Sitemap</a></p>
             </div>
         </div>
     </footer>
