Update hero title and fix brand name consistency

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <!-- Open Graph Meta Tags -->
     <meta property="og:title" content="GrokAni - Your AI-Powered Grok Ani Chat Companion">
     <meta property="og:description"
-        content="GrokAni is an AI-powered ani chat companion that brings your favorite ani characters to life with advanced AI, offering real-time conversations, emotional resonance, and a truly personalized experience.">
+        content="GrokAni is an AI-powered anime chat companion that offers a personalized experience through real-time conversation and emotional resonance.">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://grokani.live/">
     <meta property="og:image" content="https://i.imgur.com/TZe9vge.png">
@@ -39,7 +39,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="GrokAni - Your AI-Powered Grok Ani Chat Companion">
     <meta name="twitter:description"
-        content="GrokAni is an AI-powered ani chat companion that brings your favorite ani characters to life with advanced AI, offering real-time conversations, emotional resonance, and a truly personalized experience.">
+        content="GrokAni is an AI-powered anime chat companion that offers a personalized experience through real-time conversation and emotional resonance.">
     <meta name="twitter:image" content="https://i.imgur.com/TZe9vge.png">
 
     <!-- Favicon -->
@@ -99,9 +99,9 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1 class="hero-title">Experience the Future of AI Voice Conversations</h1>
-                <p class="hero-subtitle">GrokAni brings you natural, intelligent voice interactions powered by
-                    cutting-edge AI models. Chat naturally, think freely, and explore limitless possibilities.</p>
+                <h1 class="hero-title">Welcome to Chat with GrokAni by Role-Playing immersive Experience</h1>
+                <p class="hero-subtitle">GrokAni is an AI-powered anime chat companion that offers a personalized
+                    experience through real-time conversation and emotional resonance.</p>
                 <div class="hero-actions">
                     <a href="#" onclick="startChat()" class="cta-button primary">
                         <span class="button-icon">🎤</span>
