Update hero title to 'Chat with GrokAni by Role-Playing Experience'

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     <section class="hero">
         <div class="hero-content">
             <div class="hero-text">
-                <h1 class="hero-title">Welcome to Chat with GrokAni by Role-Playing immersive Experience</h1>
+                <h1 class="hero-title">Chat with GrokAni by Role-Playing Experience</h1>
                 <p class="hero-subtitle">GrokAni is an AI-powered anime chat companion that offers a personalized
                     experience through real-time conversation and emotional resonance.</p>
                 <div class="hero-actions">
