Improve Chat details

--- a/models.html
+++ b/models.html
@@ -25,6 +25,9 @@
 
         gtag('config', 'G-5ZLXDV99EC');
     </script>
+    
+    <!-- API Key Handler -->
+    <script src="api-key-handler.js"></script>
     <style>
         body {
             background: linear-gradient(135deg, #0F0F23 0%, #1A1A3A 50%, #2D1B69 100%);
