--- a/index.html
+++ b/index.html
@@ -126,13 +126,13 @@
                 <div class="character-container" style="position: relative; margin-top: 40px;">
                     <div class="character-image-container" style="width: 360px; height: 640px; border-radius: 30px; overflow: hidden; position: relative; box-shadow: 0 20px 60px rgba(107, 70, 193, 0.4); border: 3px solid rgba(168, 85, 247, 0.5);">
                         <!-- 图片1 -->
-                        <img src="https://imgur.com/0DVHMPC.jpg" alt="Ani Wallpaper 1" class="ani-wallpaper"
-                            style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 1.5s ease-in-out; z-index: 1; border-radius: 0;">
+                        <img src="https://imgur.com/0DVHMPC.jpg" alt="Ani Wallpaper 1" class="ani-wallpaper active"
+                            style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0; opacity: 1; transition: opacity 1.5s ease-in-out; z-index: 1; border-radius: 0;">
                         <!-- 图片2 -->
                         <img src="https://imgur.com/i4DXike.jpg" alt="Ani Wallpaper 2" class="ani-wallpaper"
                             style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 1.5s ease-in-out; z-index: 1; border-radius: 0;">
                         <!-- 图片3 -->
-                        <img src="https://imgur.com/mm3gcLl.jpg" alt="Ani Wallpaper 3" class="ani-wallpaper"
+                        <img src="https://imgur.com/tlBU7OV.jpg" alt="Ani Wallpaper 3" class="ani-wallpaper"
                             style="width: 100%; height: 100%; object-fit: cover; position: absolute; top: 0; left: 0; opacity: 0; transition: opacity 1.5s ease-in-out; z-index: 1; border-radius: 0;">
                     </div>
                     <a href="wallpapers.html" class="wallpaper-banner" style="position: absolute; bottom: 40px; left: 0; right: 0; background: rgba(107, 70, 193, 0.7); color: white; text-align: center; padding: 12px; font-weight: 600; text-decoration: none; backdrop-filter: blur(5px); z-index: 101; margin: 0 20px; border-radius: 30px;" onclick="loadWallpaperAd(event)">
