--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <meta property="og:description"
         content="GrokAni is an AI-powered anime chat companion that offers a personalized experience through real-time conversation and emotional resonance.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://grokani.live/">
+    <meta property="og:url" content="https://grokani.com/">
     <meta property="og:image" content="https://i.imgur.com/TZe9vge.png">
 
     <!-- Twitter Card Meta Tags -->
