--- a/wallpapers.html
+++ b/wallpapers.html
@@ -12,7 +12,7 @@
     <meta name="author" content="GrokAni Team">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="https://grokani.live/wallpapers.html">
+    <link rel="canonical" href="https://grokani.com/wallpapers.html">
 
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#6B46C1">
@@ -26,7 +26,7 @@
     <meta property="og:description"
         content="Download beautiful high-quality anime wallpapers from GrokAni. Perfect for desktop, mobile, and tablet devices.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://grokani.live/wallpapers.html">
+    <meta property="og:url" content="https://grokani.com/wallpapers.html">
     <meta property="og:image" content="https://i.imgur.com/TZe9vge.png">
 
     <!-- Twitter Card Meta Tags -->
