--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta name="author" content="GrokAni Team">
     <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1">
     <meta name="googlebot" content="index, follow">
-    <link rel="canonical" href="https://grokani.com/">
+    <link rel="canonical" href="https://grokani.live/">
 
     <!-- Additional SEO Meta Tags -->
     <meta name="theme-color" content="#6B46C1">
@@ -32,7 +32,7 @@
     <meta property="og:description"
         content="GrokAni is an AI-powered anime chat companion that offers a personalized experience through real-time conversation and emotional resonance.">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://grokani.com/">
+    <meta property="og:url" content="https://grokani.live/">
     <meta property="og:image" content="https://i.imgur.com/TZe9vge.png">
 
     <!-- Twitter Card Meta Tags -->
